[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "negotiation-rl-pro"
version = "2.0.0"
description = "A high-fidelity, multi-issue negotiation simulator for training RL agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "numpy",
    "pyyaml",
    "torch>=2.0.0",
    "transformers",
    "huggingface_hub",
    "gymnasium",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "openenv-core>=0.2.0",
]

[project.scripts]
openenv-server = "server.app:app"
